# REST-API

./: .env.example  .gitignore  API_DOCUMENTATION.md  CLEANUP_OLD_SCHEMA.sql  CRITICAL_ISSUES_QUICK_FIX.md  DATABASE_SETUP.md  FINAL_VERIFICATION_COMPLETE.md  FUNCTIONALITY_VERIFICATION_REPORT.md  PATH_COMMUNICATION_VERIFICATION.md  PORTABILITY_ISSUES.txt  PORTABILITY_VERIFICATION_FIXED.md  PROJECT_STRUCTURE.md  REQUIREMENTS_VERIFICATION.md  SCHEMA_SYNCHRONIZATION_SUMMARY.md  TEST_DATA_REFERENCE.md  schema_unified.sql  test_final_verification.php
admin/: dashboard.html
api/: admin_auth.php  admin_users_crud.php  assign_bus_to_route.php  book_ticket.php  bus_routes.php  create_passenger.php  create_schedule.php  db.php  get_admin_users.php  get_passenger_bookings.php  get_routes.php  get_schedules.php  manage_fleet.php  manage_routes.php  manage_routes_consolidated.php  migrate_add_departure_time.php  passenger_auth.php  schema_fixed.sql  search_passenger.php  setup_admin.php  setup_routes.php
cpp_client/: transit_client.cpp
database/: schema_unified.sql
passenger/: index.html
src/: DEPLOYMENT_GUIDE.md
src/client-cpp/: CMakeLists.txt  transit_client.cpp
src/client-web/api/: .env.example  admin_auth.php  book_ticket.php  db.php  delete_ticket.php  get_admin_users.php  get_my_bookings.php  get_passenger_bookings.php  get_routes.php  get_schedules.php  manage_admin_users.php  passenger_auth.php  search_passenger.php
src/client-web/passenger/: index.html
